# attention-based-edge-convolution

./: .gitignore  README.md  count_Flops.py  custom_graph_convolution.py  eval_mmnist.ipynb  eval_mmnist_pointRNN.ipynb  evaluate.py  evaluate_radhar.py  frame_point_effect.py  hyperparameter_tuning.py  knn_less_train.py  mmnist_dataset.py  multi_gpu_train.py  pantomime_dataset.py  playground.py  profiler.py  radhar_dataset.py  temporal_transformer.py  test.py  train-mmnist.py  train.py  train_mmnist.py  train_mmnist_pointRNN.py  train_modelnet.py  train_radhar.py  train_ubpg.py  ubpg_dataset.py
analysis/: metrics.ipynb
automated_graph_creation/: attention_for_graph_creation.py  attention_is_all_you_need.py  temporal_attention_for_graph_creation.py
emd/: __init__.py  emd.py
emd/.ipynb_checkpoints/: __init__-checkpoint.py  emd-checkpoint.py
hololens/: create_torch_script.py  model.py  multi_head_attention.py
hololens/example-app/: CMakeLists.txt  example-app.cpp
models/: 3d_modified_edgecnn.py  PointRNN.py  STN3d.py  dgcnn.py  knn_less_modified_edgecnn.py  lightest_temporal_dec.py  modified_edgecnn.py  modified_edgecnn_regression.py  stgcnn.py  tgcnn.py
modules/: pointrnn_cell_impl.py
scripts/: copy_files_to_inari.sh
spatial_edgecnn/: spatial_edgecnn.py
temporal_edgecnn/: temporal_edgecnn.py
utils/: augmentation_transformer.py  profile_flops.py  provider.py
